--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ https://www.tooplate.com/view/2116-blugoon
         </div>
       </section>
 
-      <!-- <section class="section my-services" data-section="section2">
+      <section class="section my-services" data-section="section2">
         <div class="container">
           <div class="section-heading">
             <h2>Greatest Features</h2>
@@ -164,7 +164,7 @@ https://www.tooplate.com/view/2116-blugoon
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <section class="section my-work" data-section="section3">
         <div class="container">
@@ -270,7 +270,7 @@ https://www.tooplate.com/view/2116-blugoon
         </div>
       </section>
 
-      <!-- <section class="section contact-me" data-section="section4">
+       <section class="section contact-me" data-section="section4">
         <div class="container">
           <div class="section-heading">
             <h2>Contact</h2>
@@ -319,7 +319,7 @@ https://www.tooplate.com/view/2116-blugoon
             </div>
           </div>
         </div>
-      </section> -->
+      </section> 
     </div>
     <!-- Scripts -->
     <!-- Bootstrap core JavaScript -->
